# near-mpc

crates/attestation/: Cargo.toml  README.md
crates/attestation/contract-interface/: Cargo.toml
crates/attestation/primitives/: Cargo.toml
crates/attestation/src/: attestation.rs  report_data.rs
crates/attestation/test_utils/: Cargo.toml
crates/attestation/test_utils/src/: attestation.rs
crates/attestation/tests/: app_compose.rs  collateral.rs  test_attestation_verification.rs
