[package]
name = "attestation-contract-interface"
version = "0.1.0"
edition = "2024"
description = "Contract interface types for NEAR MPC attestation"
license = "MIT"
repository = "https://github.com/near/mpc"
publish = false

[dependencies]
attestation = { path = ".." }
borsh = { version = "1.5.1", features = ["derive"] }
bs58 = { version = "0.5.1" }
derive_more = { version = "2.0.1", features = ["from", "deref", "into", "as_ref", "constructor"] }
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["legacy", "unit-testing", "unstable"] }
serde_json = "1.0.132"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { version = "0.8.22", optional = true }

[features]
abi = ["schemars"]
