[package]
name = "attestation-primitives"
version = "0.1.0"
edition = "2024"
description = "Primitive types and utilities for NEAR MPC attestation"
license = "MIT"
repository = "https://github.com/near/mpc"
keywords = ["near", "mpc", "primitives", "cryptography", "attestation"]
categories = ["cryptography", "no-std"]

[features]
abi = ["borsh/unstable__schema", "schemars"]

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "deref", "into", "as_ref", "constructor"] }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { version = "0.8.22", optional = true }

[dev-dependencies]
serde_json = "1.0.132"
rand = "0.8.5"

[package.metadata.cargo-shear]
ignored = ["schemars"]
